# ChangeLog for dev-python/simplejson
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/simplejson/ChangeLog,v 1.73 2012/09/15 02:00:22 blueness Exp $

  15 Sep 2012; Anthony G. Basile <blueness@gentoo.org> simplejson-2.6.0.ebuild:
  Stable ppc, bug #429040

  14 Sep 2012; Markus Meier <maekke@gentoo.org> simplejson-2.6.0.ebuild:
  arm stable, bug #429040

  12 Sep 2012; Johannes Huber <johu@gentoo.org> simplejson-2.6.0.ebuild:
  Stable for x86, wrt bug #429040

  12 Sep 2012; Agostino Sarubbo <ago@gentoo.org> simplejson-2.6.0.ebuild:
  Stable for amd64, wrt bug #429040

*simplejson-2.6.1 (29 Aug 2012)

  29 Aug 2012; Patrick Lauer <patrick@gentoo.org> +simplejson-2.6.1.ebuild:
  Bump

*simplejson-2.6.0 (28 Jun 2012)

  28 Jun 2012; Patrick Lauer <patrick@gentoo.org> +simplejson-2.6.0.ebuild:
  Bump

  29 May 2012; Brent Baude <ranger@gentoo.org> simplejson-2.5.0.ebuild:
  Marking simplejson-2.5.0 ppc for bug 415881

  27 May 2012; Markus Meier <maekke@gentoo.org> simplejson-2.5.0.ebuild:
  arm stable, bug #415881

*simplejson-2.5.2 (21 May 2012)

  21 May 2012; Patrick Lauer <patrick@gentoo.org> +simplejson-2.5.2.ebuild:
  Bump for #416801

  18 May 2012; Jeff Horelick <jdhore@gentoo.org> simplejson-2.5.0.ebuild:
  marked x86 per bug 415881

  14 May 2012; Agostino Sarubbo <ago@gentoo.org> simplejson-2.5.0.ebuild:
  Stable for amd64, wrt bug #415881

  14 May 2012; Dirkjan Ochtman <djc@gentoo.org> -simplejson-2.3.2.ebuild,
  -simplejson-2.3.3.ebuild, -simplejson-2.4.0.ebuild:
  Remove old versions.

*simplejson-2.5.0 (19 Apr 2012)

  19 Apr 2012; Patrick Lauer <patrick@gentoo.org> +simplejson-2.5.0.ebuild:
  Bump

*simplejson-2.4.0 (29 Mar 2012)

  29 Mar 2012; Dirkjan Ochtman <djc@gentoo.org> +simplejson-2.4.0.ebuild:
  Version bump to 2.4.0.

  02 Mar 2012; Markus Meier <maekke@gentoo.org> simplejson-2.3.0.ebuild:
  arm stable, bug #403269

*simplejson-2.3.3 (02 Mar 2012)
