@@ -6,17 +6,23 @@ DIST simplejson-2.5.0.tar.gz 52834 SHA256 2bcf5bedb5328a5633045a7d46784d3393ce94
 DIST simplejson-2.5.2.tar.gz 53009 SHA256 196dbf614facc5f3e650cc38a18ab64c2df0b502ecf217cbd1c9d840133e70a4 SHA512 e2ed942aca32caa1a8a5a272a6208701a1617ba3b27870a2580e44f20221b8e938cb7d092088a261d2a3b120841ad9aa0a89bb1b984975360c22ae3c13e99edf WHIRLPOOL bf2cc643df9d45ecb08c113d946629b10410982cc388a87148de75d436e3b5353a36a51386d27610d33230ba0163def3b6ea3fe2b04d3f6510f634420b5f91af
 DIST simplejson-2.6.0.tar.gz 53012 SHA256 8119b9bfb10b9ca3b0b63f8555b8efd114595ff01ba2d1c34c8aaf91e7d0badc SHA512 44ffaa289ced95f4c9fa2431243020a0fb915d2fea6afc7cf4507c6909c7a647bb6d42afe12ee077d18b92ae900c7eb54955ee6ab6e331297e6edced0d549f6b WHIRLPOOL 7490998b428b205e22ba45d7428a0439bafe803fca82e97450990b9fbce8a0a4b8f2e60e9b42037695522a67b32baef1915b2289b10e9e00ac576fbc1aaa493f
 DIST simplejson-2.6.1.tar.gz 53180 SHA256 b15befbd41157ec21795efcd960828be193cec6334b3e94bb99e02b32daad17c SHA512 ceb8df15bf7321197a3fc48fe594376fb226eff8ccc37bb695bec45f19dd0fb7baef2d764ee964e58254ade1d154c50a746cf2f8a9e85ef9922f52c15e2dc4a2 WHIRLPOOL 95606ae04d4f283650241c09b665f6f661be34351e60a9feec6e67181eabb76ccda6b86b46b75e8069ec7ff946edd377c80837f32751cf1593ce364d2b552aa1
+DIST simplejson-2.6.2.tar.gz 53228 SHA256 1b28d0896a76d4db1ab759204c039ab1ca4bf28bd30d6bf9c79172454e750dd3 SHA512 58dc99952507562d22aab8cfeb2480a9fea1422ebc588bffd148ac1579be4ef7f03ec1bafab4339447dd56c566a28132011f51a5d44584ae7b46762e61e4ac7b WHIRLPOOL c45f19b234dde5daae05659032c5ce8be39471a014abd2a11cb9d2a0f5f912010887e64e7be0761f59c04ffe73ecb3b308fd13ae30da9c1853150ad878e9c0e4
 EBUILD simplejson-2.3.0.ebuild 1219 SHA256 19a9f976cd4bcf33b83251719862de4fc717994406f835e2bcbde5df3bf482cf SHA512 7f648c57dc200b07c1a8a80aa377d052d0294877006decb860f1f1d3e3749b475701a0a53f32fc02818835392edd9553522ffe46c12529280bbc14b97ad9e056 WHIRLPOOL cac4e652f6cd452fa6582bd7ecf58de65c213c7a57d5faad0513c0d529594e7d405d38dfb7767062a52e69c958e5b670f6cd6c2017fdb532f425a16601b09013
 EBUILD simplejson-2.5.0.ebuild 1219 SHA256 8584ff5600bf09d7598c84398aa27424b0b4fd45ac6eb0f14bc73c6fba5db4f7 SHA512 cf6d3531f9c8e27abe484cbcd85d22b753da0dbc2732d947a57a856c188f70c3b925681d264d1b4063ad7e1f130e5ae34de5efc08188f8c780bb98b18a0318c9 WHIRLPOOL af5f62a7d832dab134b7fd7053b95a0a31eac532f764ae0b39875d534b2f77802eac091df8707d37d225e12b2bb096910644db2d57c86d65ce5d3956844df53f
 EBUILD simplejson-2.5.2.ebuild 1224 SHA256 3a852a9762f98bc06ee8f1ab3237aae9c1e458d678441ba9cb8cb9263a12a986 SHA512 8cb436bc66f675b21af2baaabdd1107b7dc995e2e48d443219f37f2d4dd7058e87329f56acc58160c44808c0c228770b8062412c20eb4e7bd4ef61142cb2638f WHIRLPOOL 0cad1da73775d14bb8f0b26e9bf8b81505a83290ade03af241285eea9944cb25cea206f539bb2f7f946ecff23e6d4f5c29095f849f73f7a973c521d3c53e067b
 EBUILD simplejson-2.6.0.ebuild 1221 SHA256 4653a8d1add893a63623deab6b0c60805904cddbf50c2705f0421ebd668d2071 SHA512 afef88ebc84ac820b2edbd8f0e52ff9d2644fbeb889e004aff7529023fc8cf25d2383152bedb7544e0d05dad96aebc64d8015b0c9d00f710d7bf075f2ca53268 WHIRLPOOL 2621abe92172e7a40441f5a8c44c687ad179ce359bd3e518a43949cf2615a32f2fcd0bbc47c759f8caf461506cf266e4510b5787fa5e57eda1de27986e34c8a9
 EBUILD simplejson-2.6.1.ebuild 1224 SHA256 3e7604dab1f0505c9599d303edd85ab933a815a2a468a2b8f52d8a3fe68eb647 SHA512 0ec163f5d7d6bdbe2e5b9600c1af6ad9ba4cba412be524511cb692b8588d7829f738da57e1596f1fee96b2125680d04d01f3771651be7cf8edd0a99d1f542d1f WHIRLPOOL cd483243e517d4261bb9ed86d2ffdabc6691107d1048e9b7a96b501b23233cbe00bcaa9cfdb2e4968656847bd03c0ef8fb33cd22227c535166b9a970e3d3c898
-MISC ChangeLog 9473 SHA256 6b1c7002967444fcc6c8dae5600737aee6a8d780c68f70d212815c288673b1a1 SHA512 0db48d76b6cb99e9825cd36fa35e35be63e104148a075d3ebf1373e6e1ec3bd656dc6c98169bb844ad11d9e1cb5d4c7efc74562adc408dbed82496356feffdf5 WHIRLPOOL f7cf3696c1f3a8459bf05af14c516d88adc79ddcce2af759c2600913afe988a316bc5bfe3d4eb24bacc7daaf6d502011432fa3f0416d2adfcf523daf841ab053
+EBUILD simplejson-2.6.2.ebuild 1199 SHA256 9170470adb8eaaea34fbf6a5b73120bd928be1031f50116005ce85ecc99f3705 SHA512 0ede0664e5bf11022256424551c181febf878b0c0feb938965581f3ae7702a428c4afba2572e7fa7cb9410d0eced304178c0a0be581eda188b5c52056618d978 WHIRLPOOL 7520d772909f6f6af5971d1de3cde660111ae36a1b40868e7111d8687a395326ae6034c874661726b3061220ebafc5fb15dd31ddf113a45974a4e594c5171b5a
+MISC ChangeLog 9599 SHA256 e529412714c634b8b460dcd2cde5fc6686249947e3e56d7d85188c9848799a8a SHA512 f3a100bb273bd83cd7488950c14c45b1081e4b2fe95d5a1880059af2c4a7319d265f1abc372a2f0fff275785ca2ddae494a6d766a378bfb4b59f7c196c06583d WHIRLPOOL b02be06b8d645d12193cfa2279f54cdf27926a094294c1ba179a0dc626811368422bf474eb1f06ca7825d38043e1e02cb97cb51fe251223f037dcd671f27533b
 MISC metadata.xml 233 SHA256 872d046b48b5804b0b483642b88ca48f273dc388f5cc892d80b68f948c4e2bd3 SHA512 967fc234f15e45c96feff01405f19a359b1e91e853c688c678b9cff132f9cb2026d1727134a7909af3823f4a647b18afc547487211ab8e58d87ef1e76dd6d039 WHIRLPOOL f7bf7867a1668638bcf61e9a3506c9cd749839d08ab66ecfb3b8d0fb0b760fac2960739c684180c2826157356f6b12008e4b4d09011b636899b3bbc54cb0b1bd
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlBT4R0ACgkQl5yvQNBFVTVwjwCeLT2fLFaN28nitraCQsOG+UZl
-JQQAn1b66m/QS0UW0NymHCj7GVgpj486
-=uwkP
+iQEcBAEBCAAGBQJQXoXuAAoJEEqz6FtPBkyjeW8H/09x+Qw+fvRZAjmo//QHAl7z
+Ot1/I+d+/c+UQpGjR1bUp0ArtVYPu5DOZhBF56mrZL0ubM3ink1+3t96Z9pkrwaJ
+mDEteEXnUuFMURyJePcTHpsA3gXrf3uPLR8Uaz+QVay8xib2VuOV+iiGy/OhBk6C
+NErERJl/h0vDuS6VNW++9+zOJKoWKxv6v3KfQCm0uhv+m2nT9nD/PZLVdA8KRn+n
+yJKKUFYUSblsCQPqpAMnfYptFY6AG5eLP8Sb+NKZJztx1KATqnAAX0zyrlDuAEG7
+gzjoRhoHmyINmw6bBwXfrnXucO3wwADFXnyiB03W6/77s4ISBiVlGKBQkxV9oec=
+=/b7d
 -----END PGP SIGNATURE-----
