@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/simplejson
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/simplejson/ChangeLog,v 1.73 2012/09/15 02:00:22 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/simplejson/ChangeLog,v 1.74 2012/09/23 03:45:31 radhermit Exp $
+
+*simplejson-2.6.2 (23 Sep 2012)
+
+  23 Sep 2012; Tim Harder <radhermit@gentoo.org> +simplejson-2.6.2.ebuild:
+  Version bump.
 
   15 Sep 2012; Anthony G. Basile <blueness@gentoo.org> simplejson-2.6.0.ebuild:
   Stable ppc, bug #429040
